# agno-studies

./: 01_research_agent.py  02_mm.py  Makefile  agent.db  mmonitoring.py  pyproject.toml  requirements.txt  sql_agent.py  sql_agent_websocket.py
agent-api/: pyproject.toml  requirements.txt
agent-api/api/routes/: playground.py
agent-api/teams/: finance_researcher_team.py  multi_language_team.py
agent-api/workflows/: blog_post_generator.py  investment_report_generator.py
agent_context/: 13_agent_context_instructions.py
agents/: 01_research_agent.py  04_agent_run_example.py  05_single_run_example.py  06_multi_user_multi_session.py  07_session_state.py  08_maintaining_state_across_multiple_runs.py  09_state_in_instructions.py  10_persisting_state_in_database.py
data/: chinook_description.txt
db/: settings.py
session_storage/: 11_storage.py  bkp_11_storage.py
structured_output/: movie_agent.py
team/: 14_multilanguage_team.py  15_content_team.py  16_hackernews_team.py
tmp/: data.db
tools/: 02_hn_agent_personalized_tool.py  03_advanced_tool_call.py  17_reasoning_tools.py  settings.py
