[project]
name = "agno-studies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.4.5",
    "duckduckgo-search>=8.0.1",
    "exa-py>=1.12.1",
    "lxml-html-clean>=0.4.2",
    "newspaper4k>=0.9.3.1",
    "openai>=1.78.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "tavily-python>=0.7.2",
    "yfinance>=0.2.59",
]
